--- a/apps/front/src/main.css
+++ b/apps/front/src/main.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;300;400;700&display=swap');
 
 body {
-    font-family: 'Roboto Mono', monospace;
+    font-family: 'roboto mono', monospace;
 }
